# arya-contracts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
arya_contracts/: __init__.py  _policy.py  _specs.py
tests/: test_contracts.py
