[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arya-contracts"
version = "0.1.0"
description = "Authorize contract types for ARYA Labs safety kernel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/ARYA-Labs-PBC/arya-contracts"

[tool.setuptools.packages.find]
where = ["."]
include = ["arya_contracts*"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
